--- a/en/team/style.css
+++ b/en/team/style.css
@@ -123,7 +123,7 @@ background: url("https://i.imgur.com/ed1tj4E.gif");
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://i.imgur.com/erJ2xye.gif");
+    background: url("https://i.imgur.com/5tx6xrh.gif");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
