--- a/en/team/style.css
+++ b/en/team/style.css
@@ -47,7 +47,7 @@ body {
     flex-direction: column;
 }
 .banner {
-background: url("https://i.imgur.com/ed1tj4E.gif");
+background: url("https://i.ibb.co/C9Z4J0Z/a-52485acabfe7726659af73a91c6e8743.gif");
     width: inherit;
     height: 120px;
     position: absolute;
@@ -123,7 +123,7 @@ background: url("https://i.imgur.com/ed1tj4E.gif");
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://i.imgur.com/5tx6xrh.gif");
+    background: url("https://i.ibb.co/Z8VPtf3/a-12f05b0d0f2f7fa86526424ea6836ee0.gif");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
