--- a/en/team/style.css
+++ b/en/team/style.css
@@ -47,7 +47,7 @@ body {
     flex-direction: column;
 }
 .banner {
-background: url("https://i.ibb.co/C9Z4J0Z/a-52485acabfe7726659af73a91c6e8743.gif");
+background: url("https://i.imgur.com/h33UcoS.gif");
     width: inherit;
     height: 120px;
     position: absolute;
