--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1480,6 +1480,11 @@ a:hover.back-to-top {
 	padding-bottom: 4rem;
 	background-color: #1f1f1f;
 }
+.ex-basic-3 {
+	padding-top: 6.99rem;
+	padding-bottom: 4rem;
+	background-color: #1f1f1f;
+}
 
 .ex-basic-2 h3 {
 	margin-bottom: 1rem;
