--- a/equipo/style.css
+++ b/equipo/style.css
@@ -123,7 +123,7 @@ background: url("https://i.imgur.com/h33UcoS.gif");
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://i.imgur.com/UlB78vR.gif");
+    background: url("https://cdn.discordapp.com/avatars/364935263828574232/a_57ce67172be1ea5d9a3f3bef844d84a2.gif");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
