--- a/equipo/style.css
+++ b/equipo/style.css
@@ -134,7 +134,7 @@ background: url("https://i.imgur.com/h33UcoS.gif");
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://i.imgur.com/kMq0Rfu.png");
+    background: url("https://cdn.discordapp.com/avatars/329728108485672960/cfc825ecc120360d53f592adb82355d9.png");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
