--- a/equipo/style.css
+++ b/equipo/style.css
@@ -145,7 +145,7 @@ background: url("https://i.imgur.com/h33UcoS.gif");
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://i.imgur.com/u1DQXhH.gif");
+    background: url("https://cdn.discordapp.com/avatars/530192818002460672/a_fd046d188906e492f4b8f87013927137.gif");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
