--- a/equipo/style.css
+++ b/equipo/style.css
@@ -156,7 +156,7 @@ background: url("https://i.imgur.com/h33UcoS.gif");
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://i.imgur.com/vwDKvtn.png");
+    background: url("https://cdn.discordapp.com/avatars/459448925582000129/ee94889ec28433fc48e5a2504b97917b.png");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
