--- a/equipo/style.css
+++ b/equipo/style.css
@@ -47,7 +47,7 @@ body {
     flex-direction: column;
 }
 .banner {
-background: url("https://i.imgur.com/h33UcoS.gif");
+background: url("https://cdn.discordapp.com/banners/364935263828574232/a_0b5601e37c1493244b10ef2f43aa851e.gif");
     width: inherit;
     height: 120px;
     position: absolute;
