--- a/en/team/style.css
+++ b/en/team/style.css
@@ -47,7 +47,7 @@ body {
     flex-direction: column;
 }
 .banner {
-background: url("https://i.imgur.com/h33UcoS.gif");
+background: url("https://cdn.discordapp.com/banners/364935263828574232/a_0b5601e37c1493244b10ef2f43aa851e.gif");
     width: inherit;
     height: 120px;
     position: absolute;
@@ -123,7 +123,7 @@ background: url("https://i.imgur.com/h33UcoS.gif");
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://i.imgur.com/UlB78vR.gif");
+    background: url("https://cdn.discordapp.com/avatars/364935263828574232/a_57ce67172be1ea5d9a3f3bef844d84a2.gif");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
@@ -134,7 +134,7 @@ background: url("https://i.imgur.com/h33UcoS.gif");
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://i.imgur.com/kMq0Rfu.png");
+    background: url("https://cdn.discordapp.com/avatars/329728108485672960/cfc825ecc120360d53f592adb82355d9.png");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
@@ -145,7 +145,7 @@ background: url("https://i.imgur.com/h33UcoS.gif");
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://i.imgur.com/u1DQXhH.gif");
+    background: url("https://cdn.discordapp.com/avatars/530192818002460672/a_fd046d188906e492f4b8f87013927137.gif");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
@@ -156,7 +156,7 @@ background: url("https://i.imgur.com/h33UcoS.gif");
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://i.imgur.com/vwDKvtn.png");
+    background: url("https://cdn.discordapp.com/avatars/459448925582000129/ee94889ec28433fc48e5a2504b97917b.png");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
