--- a/en/team/style.css
+++ b/en/team/style.css
@@ -134,7 +134,7 @@ background: url("https://cdn.discordapp.com/banners/364935263828574232/a_0b5601e
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://cdn.discordapp.com/avatars/329728108485672960/cfc825ecc120360d53f592adb82355d9.png");
+    background: url("https://cdn.discordapp.com/avatars/329728108485672960/7771355e6a4cafc36517e65feef52b83.webp");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
@@ -145,7 +145,7 @@ background: url("https://cdn.discordapp.com/banners/364935263828574232/a_0b5601e
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://cdn.discordapp.com/avatars/530192818002460672/a_fd046d188906e492f4b8f87013927137.gif");
+    background: url("https://cdn.discordapp.com/avatars/530192818002460672/a_b25d1dbf8f8806db0987c1df2b50c6cf.gif");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
