--- a/en/team/style.css
+++ b/en/team/style.css
@@ -123,7 +123,7 @@ background: url("https://cdn.discordapp.com/banners/364935263828574232/a_0b5601e
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://cdn.discordapp.com/avatars/364935263828574232/a_57ce67172be1ea5d9a3f3bef844d84a2.gif");
+    background: url("https://cdn.discordapp.com/avatars/364935263828574232/efe79ec813c1f9015b5dcb61ac1900c5.webp");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
