--- a/equipo/style.css
+++ b/equipo/style.css
@@ -123,7 +123,7 @@ background: url("https://cdn.discordapp.com/banners/364935263828574232/a_0b5601e
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://cdn.discordapp.com/avatars/364935263828574232/efe79ec813c1f9015b5dcb61ac1900c5.webp);
+    background: url("https://cdn.discordapp.com/avatars/364935263828574232/efe79ec813c1f9015b5dcb61ac1900c5.webp");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
@@ -134,7 +134,7 @@ background: url("https://cdn.discordapp.com/banners/364935263828574232/a_0b5601e
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: urlhttps://cdn.discordapp.com/avatars/329728108485672960/de1ba6928e998835c8782730dc9ba180.webp");
+    background: url("https://cdn.discordapp.com/avatars/329728108485672960/de1ba6928e998835c8782730dc9ba180.webp");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
@@ -199,7 +199,7 @@ background: url("https://cdn.discordapp.com/banners/364935263828574232/a_0b5601e
     position: relative;
     width: 16px;
     height: 16px;
-    background: url("https://cdn.discordapp.com/attachments/859496866151792663/892921966133125140/online.png"), #18191c;
+    background: url("https://cdn.discordapp.com/attachments/859496866151792663/892921966133125140/online.png");
     float: right;
     top: 55px;
     border-radius: 50%;
