--- a/equipo/style.css
+++ b/equipo/style.css
@@ -123,7 +123,7 @@ background: url("https://i.imgur.com/I7THsqQ.gif");
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://cdn.discordapp.com/avatars/364935263828574232/efe79ec813c1f9015b5dcb61ac1900c5.webp");
+    background: url("https://cdn.discordapp.com/avatars/364935263828574232/a_17bf84e5b38d177c9100c2bfa3460e64.gif?size=2048");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
@@ -134,7 +134,7 @@ background: url("https://i.imgur.com/I7THsqQ.gif");
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://cdn.discordapp.com/avatars/329728108485672960/de1ba6928e998835c8782730dc9ba180.webp");
+    background: url("https://cdn.discordapp.com/avatars/329728108485672960/295e75c6c6aeed3eb9fe3449a7a81760.webp?size=2048");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
