--- a/equipo/style.css
+++ b/equipo/style.css
@@ -47,7 +47,7 @@ body {
     flex-direction: column;
 }
 .banner {
-background: url("https://i.imgur.com/I7THsqQ.gif");
+background: url("https://i.imgur.com/CR1xycW.gif");
     width: inherit;
     height: 120px;
     position: absolute;
@@ -123,7 +123,7 @@ background: url("https://i.imgur.com/ZMwrywk.gif");
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://cdn.discordapp.com/avatars/364935263828574232/a_17bf84e5b38d177c9100c2bfa3460e64.gif?size=2048");
+    background: url("https://i.imgur.com/KFbT1ta.gif");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
