--- a/equipo/style.css
+++ b/equipo/style.css
@@ -134,7 +134,7 @@ background: url("https://i.imgur.com/ZMwrywk.gif");
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://i.imgur.com/HfQCYeX.png");
+    background: url("https://i.imgur.com/JaSshXx.png");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
@@ -145,7 +145,7 @@ background: url("https://i.imgur.com/ZMwrywk.gif");
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://i.imgur.com/Qey3MCq.png");
+    background: url("https://i.imgur.com/X8uFxmG.gif");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
