--- a/equipo/style.css
+++ b/equipo/style.css
@@ -47,7 +47,7 @@ body {
     flex-direction: column;
 }
 .banner {
-background: url("https://i.imgur.com/CR1xycW.gif");
+background: url("https://i.imgur.com/QsrnNYy.gif");
     width: inherit;
     height: 120px;
     position: absolute;
