--- a/equipo/style.css
+++ b/equipo/style.css
@@ -47,7 +47,7 @@ body {
     flex-direction: column;
 }
 .banner {
-background: url("https://i.imgur.com/QsrnNYy.gif");
+background: url("https://media.discordapp.net/attachments/1224576994956673077/1318468016035598459/a_665801bf2dce7cb6becdbe65d8e129ae.gif?ex=67626e86&is=67611d06&hm=02fb9e651aa5f4700f96c7d9c24a96a029cc7976a927e5f167816130352154da&=");
     width: inherit;
     height: 120px;
     position: absolute;
