--- a/equipo/style.css
+++ b/equipo/style.css
@@ -59,7 +59,7 @@ background: url("https://media.discordapp.net/attachments/1224576994956673077/13
 
 }
 .banner2 {
-background: url("https://i.imgur.com/ZMwrywk.gif");
+background-color: #1c0d0a;
         width: inherit;
         height: 120px;
         position: absolute;
