--- a/equipo/style.css
+++ b/equipo/style.css
@@ -145,7 +145,7 @@ background-color: #1c0d0a;
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://i.imgur.com/X8uFxmG.gif");
+    background: url("https://media.discordapp.net/attachments/1224576994956673077/1318470591480594473/a_7d610eeb04f56232d0e54bbe70efb308.gif?ex=676270ed&is=67611f6d&hm=e836da18770aeaff40e23d875675a14b096aa2c7e4741aea19ce884a24b0ba54&=");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
