--- a/equipo/style.css
+++ b/equipo/style.css
@@ -134,7 +134,7 @@ background-color: #1c0d0a;
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://i.imgur.com/JaSshXx.png");
+    background: url("https://media.discordapp.net/attachments/1224576994956673077/1318473840136814655/1091ae010feb53d8617f3a88a752ddad.webp?ex=676273f3&is=67612273&hm=2715fde4e77cfd2f0e549e8d3a0a2ddf11a34b06be8acbedbdc461c415d94ee1&=&format=webp");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
