--- a/equipo/style.css
+++ b/equipo/style.css
@@ -134,7 +134,7 @@ background-color: #1c0d0a;
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://media.discordapp.net/attachments/1224576994956673077/1318473840136814655/1091ae010feb53d8617f3a88a752ddad.webp?ex=676273f3&is=67612273&hm=2715fde4e77cfd2f0e549e8d3a0a2ddf11a34b06be8acbedbdc461c415d94ee1&=&format=webp");
+    background: url("https://media.discordapp.net/attachments/1224576994956673077/1318476237315768392/1091ae010feb53d8617f3a88a752ddad-ezgif.com-webp-to-jpg-converter.jpg?ex=6762762f&is=676124af&hm=f55b28bac06dafecb8a54d3bcbd5fbf45c237a1f833747f400d09fb781286d6c&=&format=webp");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
