--- a/en/team/style.css
+++ b/en/team/style.css
@@ -123,7 +123,7 @@ background-color: #1c0d0a;
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://i.imgur.com/KFbT1ta.gif");
+    background: url("https://media.discordapp.net/attachments/1224576994956673077/1318452709741039616/36c13256116ce374cdf6cec08dc5e9b5.png?ex=67626045&is=67610ec5&hm=1473bd8a7cb71f75480bfcb94506cde64b7a5cdb6d9256500aaa77c1dcf5e82e&=&format=webp&quality=lossless");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
@@ -134,7 +134,7 @@ background-color: #1c0d0a;
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://i.imgur.com/JaSshXx.png");
+    background: url("https://media.discordapp.net/attachments/1224576994956673077/1318476237315768392/1091ae010feb53d8617f3a88a752ddad-ezgif.com-webp-to-jpg-converter.jpg?ex=6762762f&is=676124af&hm=f55b28bac06dafecb8a54d3bcbd5fbf45c237a1f833747f400d09fb781286d6c&=&format=webp");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
@@ -145,7 +145,7 @@ background-color: #1c0d0a;
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://i.imgur.com/X8uFxmG.gif");
+    background: url("https://media.discordapp.net/attachments/1224576994956673077/1318470591480594473/a_7d610eeb04f56232d0e54bbe70efb308.gif?ex=676270ed&is=67611f6d&hm=e836da18770aeaff40e23d875675a14b096aa2c7e4741aea19ce884a24b0ba54&=");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
