--- a/equipo/style.css
+++ b/equipo/style.css
@@ -123,7 +123,7 @@ background-color: #1c0d0a;
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://media.discordapp.net/attachments/1224576994956673077/1318452709741039616/36c13256116ce374cdf6cec08dc5e9b5.png?ex=67626045&is=67610ec5&hm=1473bd8a7cb71f75480bfcb94506cde64b7a5cdb6d9256500aaa77c1dcf5e82e&=&format=webp&quality=lossless");
+    background: url("https://i.imgur.com/KFbT1ta.gif");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
