--- a/en/team/style.css
+++ b/en/team/style.css
@@ -47,7 +47,7 @@ body {
     flex-direction: column;
 }
 .banner {
-    background: url("https://i.imgur.com/QsrnNYy.gif");
+    background: url("https://i.imgur.com/FkcTH7n.gif");
     width: inherit;
     height: 120px;
     position: absolute;
@@ -123,7 +123,7 @@ background-color: #1c0d0a;
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://i.imgur.com/KFbT1ta.gif");
+    background: url("https://i.imgur.com/Es7c3Rt.png");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
@@ -134,7 +134,7 @@ background-color: #1c0d0a;
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://i.imgur.com/JaSshXx.png");
+    background: url("https://i.imgur.com/kCP7uAs.png");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
@@ -145,7 +145,7 @@ background-color: #1c0d0a;
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://i.imgur.com/X8uFxmG.gif");
+    background: url("https://i.imgur.com/yn5c489.gif");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
