--- a/en/team/style.css
+++ b/en/team/style.css
@@ -130,11 +130,11 @@ body {
 }
 .cat-ears {
     position: absolute;
-    top: -0px; 
+    top: -0px; /* Ajusta para que las orejas se coloquen justo encima */
     left: 10%;
     transform: translateX(-39%);
-    width: 80px; 
-    pointer-events: none; 
+    width: 80px; /* Ajusta el tamaño de las orejas según tu avatar */
+    pointer-events: none; /* Asegúrate de que no interfiera con el cursor */
   }
 .avatar2 {
     pointer-events: all;
