--- a/equipo/style.css
+++ b/equipo/style.css
@@ -123,7 +123,7 @@ body {
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://i.imghippo.com/files/lVtb4292K.png");
+    background: url("https://cdn.nayutabot.com/avatarmau.png");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
@@ -142,7 +142,7 @@ body {
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://i.imghippo.com/files/ZE1714zd.png");
+    background: url("https://cdn.nayutabot.com/avatarbazty.png");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
@@ -153,7 +153,7 @@ body {
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://i.imghippo.com/files/yfR1231cg.gif");
+    background: url("https://cdn.nayutabot.com/avataredu.png");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
@@ -164,7 +164,7 @@ body {
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://i.imghippo.com/files/mpUF6877mm.png");
+    background: url("https://cdn.nayutabot.com/wackavatar.gif");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
