--- a/en/team/style.css
+++ b/en/team/style.css
@@ -123,7 +123,7 @@ body {
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://i.imgur.com/Es7c3Rt.png");
+    background: url("https://cdn.nayutabot.com/media/avatarmau.png");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
@@ -142,7 +142,7 @@ body {
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://i.imgur.com/kCP7uAs.png");
+    background: url("https://cdn.nayutabot.com/media/avatarbazty.png");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
@@ -153,7 +153,7 @@ body {
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://i.imgur.com/yn5c489.gif");
+    background: url("https://cdn.nayutabot.com/media/avataredu.png");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
@@ -164,7 +164,7 @@ body {
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://cdn.discordapp.com/avatars/459448925582000129/ee94889ec28433fc48e5a2504b97917b.png");
+    background: url("https://cdn.nayutabot.com/media/wackavatar.gif");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
