--- a/equipo/style.css
+++ b/equipo/style.css
@@ -207,7 +207,7 @@ body {
     position: relative;
     width: 16px;
     height: 16px;
-    background: url("https://cdn.discordapp.com/attachments/859496866151792663/892921966133125140/online.png");
+    background: url("https://cdn.nayutabot.com/media/avataredu.png");
     float: right;
     top: 55px;
     border-radius: 50%;
