--- a/en/team/style.css
+++ b/en/team/style.css
@@ -47,7 +47,7 @@ body {
     flex-direction: column;
 }
 .banner {
-    background: url("https://i.imgur.com/FkcTH7n.gif");
+    background: url("https://cdn.nayutabot.com/media/bannermau.png");
     width: inherit;
     height: 120px;
     position: absolute;
