--- a/equipo/style.css
+++ b/equipo/style.css
@@ -128,7 +128,7 @@ body {
     border: 6px solid #18191c;
     cursor: pointer;
 }
-.cat-ears {
+.angel {
     position: absolute;
     top: -0px;
     left: 10%;
