--- a/en/team/style.css
+++ b/en/team/style.css
@@ -128,13 +128,13 @@ body {
     border: 6px solid #18191c;
     cursor: pointer;
 }
-.cat-ears {
+.angel {
     position: absolute;
-    top: -0px; /* Ajusta para que las orejas se coloquen justo encima */
+    top: -0px; 
     left: 10%;
     transform: translateX(-39%);
-    width: 80px; /* Ajusta el tamaño de las orejas según tu avatar */
-    pointer-events: none; /* Asegúrate de que no interfiera con el cursor */
+    width: 80px; 
+    pointer-events: none;
   }
 .avatar2 {
     pointer-events: all;
