--- a/equipo/style.css
+++ b/equipo/style.css
@@ -123,7 +123,7 @@ body {
     border-radius: 50%;
     width: 80px;
     height: 80px;
-    background: url("https://cdn.nayutabot.com/media/avatarmau.png");
+    background: url("https://cdn.nayutabot.com/media/avatarmau.gif");
     background-size: cover;
     border: 6px solid #18191c;
     cursor: pointer;
