--- a/en/team/style.css
+++ b/en/team/style.css
@@ -128,7 +128,7 @@ body {
     border: 6px solid #18191c;
     cursor: pointer;
 }
-.angel {
+.sombrero {
     position: absolute;
     top: -0px; 
     left: 10%;
